--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@ngrx/router-store": "^8.2.0",
     "@ngrx/store": "^8.2.0",
     "@ngrx/store-devtools": "^8.2.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
